# Semester-Help

./: .gitignore  README.md  auth.py  chat_engine.py  create_admin.py  database.py  dockerfile  documentloader.py  image_extractor.py  image_retriever.py  loadandvectorstoredocs.py  main.py  memory_handler.py  multimodal.py  query_optimizer.py  requirements.txt  splitter_vectorstore.py
client/: docker-compose.yaml  dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/auth/: LogoutModal.tsx  ProtectedRoute.tsx
client/src/components/chat/: ChatMessage.tsx  ChatSidebar.tsx
client/src/components/layout/: Footer.tsx  Layout.tsx  Navbar.tsx
client/src/context/: AuthContext.tsx  NotificationContext.tsx  ThemeContext.tsx
client/src/pages/: AboutPage.tsx  AdminDashboard.tsx  AuthPage.tsx  ChatPage.tsx  ContactPage.tsx  LandingPage.tsx  NotFoundPage.tsx  ProfileSection.tsx
client/src/services/: adminService.ts  api.ts
client/src/types/: index.ts  user.ts
models/: user.py
server/: .gitignore  database.py  dockerfile  main.py  pyproject.toml
server/config/: settings.py
server/db/: connection.py
server/media/: image_service.py
server/memory/: memory_service.py
server/models/: user.py
server/pipeline/: answer_builder.py  orchestrator.py  query_optimizer.py
server/retrieval/: reranker.py  retriever.py  vectorstore_loader.py
server/routers/: auth_routes.py
server/utils/: llm_factory.py  logging.py  prompt.py  security.py  token.py
(+1 files in other folders)
