[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "certifi>=2025.8.3",
    "dnspython>=2.7.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pydantic[email]>=2.11.7",
    "pymongo[srv]>=4.14.1",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "tiktoken>=0.11.0",
    "uvicorn>=0.35.0",
]
